# abyss

./: .gitignore  Cargo.toml  NOTICE  README.md  check_output.txt
.github/workflows/: ci.yml  release.yml
ideas/: plan.md
roadmap/: plan.md
src/: app.rs  events.rs  lib.rs  main.rs
src/cleaner/: deleter.rs  mod.rs  patterns.rs  scanner.rs  tree.rs
src/fs/: backend.rs  copy.rs  gcs.rs  local.rs  mod.rs  remote.rs  s3.rs  selecting.rs  types.rs
src/hash/: benchmark.rs  compare.rs  database.rs  dedup.rs  error.rs  hash.rs  ignore_handler.rs  mod.rs  path_utils.rs  scan.rs  verify.rs  wildcard.rs
src/k8s/: client.rs  mod.rs  pod.rs  pvc.rs
src/sync/: compression.rs  conflict.rs  engine.rs  exclude.rs  hash.rs  mod.rs  throttle.rs  watcher.rs
src/ui/: components.rs  mod.rs  pane.rs  syntax.rs
tests/: hash_integration.rs
tests/hash/: benchmark_tests.rs  compare_tests.rs  database_tests.rs  error_tests.rs  hash_tests.rs  international_tests.rs  mod.rs  scan_tests.rs  utility_tests.rs  verify_tests.rs
