[package]
name = "abyss"
version = "0.0.1"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
tokio = { version = "1.48", features = ["full"] }
kube = { version = "2.0", features = ["client", "runtime", "derive", "ws"] }
k8s-openapi = { version = "0.26", features = ["v1_30"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
futures = "0.3"
chrono = "0.4"
jwalk = "0.8"
opendal = { version = "0.55", features = ["services-s3", "services-gcs"] }
async-trait = "0.1"

# Sync & Replication (Phase 3)
notify = "6.1"           # File watching (inotify/FSEvents/ReadDirectoryChanges)
globset = "0.4"          # Pattern matching for excludes
flate2 = "1.0"           # Gzip compression
zstd = "0.13"            # Zstd compression
blake3 = "1.5"           # Fast hashing
governor = "0.6"         # Rate limiting / bandwidth throttling
nonzero_ext = "0.3"      # NonZero utilities for governor

[dev-dependencies]
tempfile = "3.19"

[profile.release]
opt-level = 3
lto = "fat"
strip = true
panic = "abort"
codegen-units = 1
