[package]
name = "abyss"
version = "0.0.1"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
tokio = { version = "1.48", features = ["full"] }
kube = { version = "2.0", features = ["client", "runtime", "derive", "ws"] }
k8s-openapi = { version = "0.26", features = ["v1_30"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
futures = "0.3"
chrono = "0.4"
jwalk = "0.8"
opendal = { version = "0.55", features = ["services-s3", "services-gcs"] }
async-trait = "0.1"

# Sync & Replication (Phase 3)
notify = "8.2"           # File watching (inotify/FSEvents/ReadDirectoryChanges)
globset = "0.4"          # Pattern matching for excludes
flate2 = "1.1"           # Gzip compression
zstd = "0.13"            # Zstd compression
blake3 = { version = "1.8", features = ["rayon"] }  # Fast multicore hashing
rayon = "1.11"           # Parallel processing
governor = "0.10"        # Rate limiting / bandwidth throttling
nonzero_ext = "0.3"      # NonZero utilities for governor

# Hash algorithms (from hash-core)
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
blake2 = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# File system utilities (from hash-core)
ignore = "0.4"           # .gitignore-style pattern matching
glob = "0.3"             # Wildcard pattern expansion
memmap2 = "0.9"          # Memory-mapped file I/O
xz2 = "0.1"              # LZMA compression for database files
crossbeam-channel = "0.5" # Efficient channel for parallel scanning
indicatif = "0.18"       # Progress bar display

# Downgrading to match language parsers (Rust is 0.24, others are older)
tree-sitter = "=0.24.4"
tree-sitter-highlight = "=0.24.4"
tree-sitter-rust = "0.23" 
tree-sitter-go = "0.23"
tree-sitter-hcl = "1.0"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-md = "0.3"
[dev-dependencies]
tempfile = "3.23"

[profile.release]
opt-level = 3
lto = "fat"
strip = true
panic = "abort"
codegen-units = 1
